<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="bytecode.sa.firstapplication.Payment"
    tools:showIn="@layout/activity_payment"
    android:orientation="vertical"
    android:gravity="center_horizontal|bottom">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bank_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_transfer"
            android:textColor="@color/black"
            android:textSize="22sp" />
    </LinearLayout>

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/account"
       android:textColor="@color/black"
       android:textSize="30sp"
       android:layout_marginTop="50dp"/>

    <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/bytecode"
        android:layout_marginTop="10dp"
       android:textColor="@color/colorPrimary"
       android:textSize="30sp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BankName"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="50dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/payment_confirm"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1234567654355y6"
        android:textColor="@color/black"
        android:textSize="30sp"/>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Done"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        />

    
</LinearLayout>
