<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bytecode.sa.firstapplication.Login">

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:text="@string/Name"
        android:textSize="25sp"
        android:layout_alignParentStart="true"
        android:id="@+id/text1"
        android:layout_marginTop="55dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="info@in1.newa"
        android:layout_toEndOf="@id/text1"
        android:layout_alignBottom="@id/text1"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="70dp" />

    <View
        android:layout_width="match_parent"
        android:id="@+id/l1"
        android:background="@color/black"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/text1"
        android:layout_centerHorizontal="true"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inashnalty"
        android:textSize="25sp"
        android:layout_below="@+id/l1"
        android:id="@+id/text2"
        android:layout_marginBottom="10dp"/>
    <View
        android:layout_width="match_parent"
        android:background="@color/black"
        android:id="@+id/text3"
        android:layout_below="@+id/text2"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nnmber"
        android:layout_below="@id/text3"

        android:textSize="25sp"
        android:layout_alignParentStart="true"
        android:id="@+id/text4"

        android:layout_marginTop="5dp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="*****"
        android:layout_toEndOf="@id/text4"
        android:layout_alignBottom="@id/text4"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="70dp" />
    <View
        android:layout_width="match_parent"
        android:id="@+id/l01"
        android:background="@color/black"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/text4"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Gende"
        android:textSize="25sp"
        android:layout_below="@+id/l01"
        android:layout_alignParentStart="true"
        android:id="@+id/text5"
        android:layout_marginTop="5dp" />
    <View
        android:layout_width="match_parent"
        android:id="@id/text"
        android:background="@color/black"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/text5"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="25sp"
        android:layout_alignParentStart="true"
        android:id="@+id/text12"
        android:layout_below="@id/text"
        android:layout_marginTop="5dp" />



</RelativeLayout>

